--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/build": "^21.0.2",
     "@angular/cli": "^21.0.2",
     "@angular/compiler-cli": "^21.0.3",
+    "angular-cli-ghpages": "^2.0.3",
     "jsdom": "^27.1.0",
     "ng-packagr": "^21.0.0",
     "typescript": "^5.9.3",
